Small changes in doc